# PolygonDB

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  dockerfile  go.mod  go.sum  go.work  go.work.sum  main.go  output.txt  ploygondb.service  settings.json  test.txt
.github/: FUNDING.yml  GitLogs.yml
.github/workflows/: AlpineDockerPush.yml  AlpinePush.yml  DebianDockerPush.yml  Gorun.yml  RedHatPush.yml  docker-publish.yml  go.yml  go1.yml  goDockerPush.yml
GoPackage/: go.mod  main.go
GoPackage/arenas/: go.mod
GoPackage/gabs.Revisioned/: go.mod  go.sum  main.go
GoPackage/utilities/polyEncrypt/: polyEncrypt.go
GoPackage/utilities/polyFuncs/: polycfuncs.go
GoPackage/utilities/polyStructs/: polyStructs.go
GoPackage/utilities/polySync/: polySync.go
GoPackage/utilities/terminal/: terminal.go
PolygonDB_Rust/: Cargo.toml
PolygonDB_Rust/databases/: home.ply
PolygonDB_Rust/src/: main.rs  maincore.rs
Polygon_Mercury/: go.mod  go.sum  main.go  settings.json
benchmarks/: Canada_PolygonvsPython.py  Index_PolygonvsNode.js  Index_PolygonvsPython.py  PolygonvsJS.js  PolygonvsPython.py  README.md  Search_PolygonvsNode.js  Search_PolygonvsPython.py  Twitter_PolygonvsPython.py
benchmarks/Polygon1.6/: Index_PolygonvsNode.js  Index_PolygonvsPython.py  Search_PolygonvsNode.js
databases/: bin_database.json  canada.json  database.bson  database.json  home.bson  home.json  twitter.json
databases/CatoDB/: config.json  database.json
databases/ExampleDB/: config.json  database.json
databases/Search_Benchmark/: config.json  database.json
docker/: Dockerfile
docker/alpine/: Dockerfile  entrypoint.sh
docker/redhat/: Dockerfile  entrypoint.sh
extensions/: lastten.go
legacy_go/: go.sum
legacy_go/databases/ExampleDB/: database.json
pteroeggs/: README.md  egg-polygon.json
script/: for_ptero.bash  installer_AMDx64  ptero_dev.bash
src/: main.rs  maincore.rs  nwebsocket.rs  testws.rs  websocket.rs
sysadmin/: sysadmin.c
utilities/: polycfuncs.go  terminal.go
utilities/polyFuncs/: polycfuncs.go
utilities/terminal/: terminal.go
