[package]
name = "polygondb"
version = "1.16"
edition = "2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units = 1

[profile.dev.package.simple-websockets]
opt-level = 2

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonptr = "*"
json_value_remove = "*"
simple-websockets = "*"
mimalloc-rust = "0.2.1"
