[package]
name = "polygondb"
version = "0.1.16"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/PolygonDB/PolygonDB"
repository = "https://github.com/PolygonDB/PolygonDB"
license = "Apache-2.0"
license-file = "LICENSE"
publish = true
package-name = "polygondb_Driver"

description = "Driver for PolygonDB"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units = 1

[profile.dev.package.simple-websockets]
opt-level = 2

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonptr = "0.4.4"
json_value_remove = "1.0.2"
simple-websockets = "0.1.6"
mimalloc-rust = "0.2.1"
