[package]
name = "polygondb"
version = "1.16.0"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/PolygonDB/PolygonDB"
repository = "https://github.com/PolygonDB/PolygonDB"
license = "Apache-2.0"
license-file = "LICENSE"
publish = true
package-name = "polygondb_Driver"
include = ["src/*", "LICENSE", "README.md"]

description = "Driver for PolygonDB"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units = 1
incremental = false
opt-level=3
overflow-checks = false

[profile.dev.package."*"]
opt-level = 3

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonptr = "0.4.4"
json_value_remove = "1.0.2"
simple-websockets = "0.1.6"
mimalloc-rust = "0.2.1"
tungstenite = "0.20.1"
lazy_static = "1.4.0"
